cmake_minimum_required(VERSION 2.8)
set(OpenCV_INCLUDE_DIRS /usr/local/include/opencv2)
set(OpenCV_LIBS opencv_world)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
add_definitions(-std=c++11)
project(GPUTest)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(gTest main.cpp SPImage.hpp SPImage.cpp)
target_link_libraries(gTest ${OpenCV_LIBS})
